fixed light/dark mode editor styles

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -70,5 +70,8 @@ a:focus {
   @apply list-inside;
 }
 .nuxt-content-editor {
+  @apply bg-gray-100;
+}
+.dark-mode .nuxt-content-editor {
   @apply bg-gray-900;
 }
